# inery

./: CMakeLists.txt  IMPORTANT.md  README.md  docs.json  ine.doxygen.in  inery.version.in
CMakeModules/: IneryTester.cmake.in  IneryTesterBuild.cmake.in  MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  inery-config.cmake.in  package.cmake
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  apply_context.cpp  asset.cpp  authorization_manager.cpp  block.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  inery_contract.cpp  inery_contract_abi.cpp  inery_contract_abi_bin.cpp  merkle.cpp  name.cpp  platform_timer_accuracy.cpp  platform_timer_asio_fallback.cpp  platform_timer_macos.cpp  platform_timer_posix.cpp  producer_schedule.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  resource_limits.cpp  snapshot.cpp  thread_utils.cpp  trace.cpp  transaction.cpp  transaction_context.cpp  transaction_metadata.cpp  wasm_inery_binary_ops.cpp  wasm_inery_injection.cpp  wasm_inery_validation.cpp  (+3 more)
libraries/chain/include/inery/chain/webassembly/ine-vm-oc/: gs_seg_helpers.h  ine-vm-oc.h
libraries/chain/webassembly/: ine-vm-oc.cpp  ine-vm.cpp  wabt.cpp
libraries/chain/webassembly/ine-vm-oc/: About WAVM  LLVMEmitIR.cpp  LLVMJIT.cpp  LLVMJIT.h  code_cache.cpp  compile_monitor.cpp  compile_trampoline.cpp  executor.cpp  gs_seg_helpers.c  intrinsic.cpp  ipc_helpers.cpp  llvmWARshim.cpp  memory.cpp
libraries/fc/CMakeModules/: FindVLD.cmake
libraries/ine-vm/: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  inery.system.wasm
libraries/ine-vm/.cicd/: pipeline.yml
libraries/ine-vm/docs/: OVERVIEW.md
libraries/ine-vm/modules/: IneVMBuildUtils.cmake
libraries/ine-vm/tests/: CMakeLists.txt  allocator_tests.cpp  execution_tests.cpp.bk  guarded_ptr_tests.cpp  host_functions_tests.cpp  implementation_limits_tests.cpp  instantiation_tests.cpp  main.cpp  outcome_tests.cpp  parse_tests.cpp  reentry_tests.cpp  signals_tests.cpp  stack_restriction_tests.cpp  utils.hpp  variant_tests.cpp  varint_tests.cpp  vector_tests.cpp  wasm_config.hpp.in  wasm_stack_tests.cpp  watchdog_tests.cpp
libraries/ine-vm/tools/: CMakeLists.txt  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
libraries/version/src/: version.cpp  version_impl.cpp.in  version_impl.hpp
libraries/wabt/: CMakeLists.txt
libraries/yubihsm/aes_cmac/: aes.c
libraries/yubihsm/cmake/: mingw32.cmake  mingw64.cmake
libraries/yubihsm/doc/: API_Changes.adoc
libraries/yubihsm/examples/: change_authkey.c  p256_pvtkey.pem
libraries/yubihsm/lib/: Doxyfile  error.c  scp.h  version.rc.in  version_winhttp.rc.in  version_winusb.rc.in  yubihsm.c  yubihsm.h  yubihsm_curl.c  yubihsm_winhttp.c
libraries/yubihsm/pkcs11/: pkcs11.h  util_pkcs11.c  yubihsm_pkcs11.c
libraries/yubihsm/src/: version.rc.in
libraries/yubihsm/yhwrap/: version.rc.in
libraries/yubihsm/ykyh/: error.c  ykyh.c  ykyh.h
plugins/: COMMUNITY.md  inery-make_new_plugin.sh
plugins/chain_api_plugin/: CMakeLists.txt  chain.swagger.yaml  chain_api_plugin.cpp
plugins/chain_plugin/: CMakeLists.txt  account_query_db.cpp  chain_plugin.cpp
plugins/chain_plugin/include/inery/chain_plugin/: account_query_db.hpp  chain_plugin.hpp
plugins/db_size_api_plugin/: CMakeLists.txt  db_size.swagger.yaml  db_size_api_plugin.cpp
plugins/faucet_testnet_plugin/: CMakeLists.txt  faucet_testnet_plugin.cpp
plugins/history_api_plugin/: CMakeLists.txt  history_api_plugin.cpp
plugins/history_plugin/: CMakeLists.txt  history_plugin.cpp
plugins/http_client_plugin/: CMakeLists.txt  http_client_plugin.cpp
plugins/http_plugin/: CMakeLists.txt  http_plugin.cpp
plugins/login_plugin/: CMakeLists.txt  login_plugin.cpp
plugins/mongo_db_plugin/: CMakeLists.txt  mongo_db_plugin.cpp
plugins/net_api_plugin/: CMakeLists.txt  net.swagger.yaml  net_api_plugin.cpp
plugins/net_plugin/: CMakeLists.txt  net_plugin.cpp
plugins/producer_api_plugin/: CMakeLists.txt  producer.swagger.yaml  producer_api_plugin.cpp
plugins/producer_plugin/: CMakeLists.txt  producer_plugin.cpp
plugins/state_history_plugin/: CMakeLists.txt  state_history_plugin.cpp  state_history_plugin_abi.cpp
plugins/template_plugin/: CMakeLists.txt  template_plugin.cpp
plugins/test_control_api_plugin/: CMakeLists.txt  test_control.swagger.yaml  test_control_api_plugin.cpp
plugins/test_control_plugin/: CMakeLists.txt  test_control_plugin.cpp
plugins/trace_api_plugin/: CMakeLists.txt  abi_data_handler.cpp  compressed_file.cpp  request_handler.cpp  store_provider.cpp  trace_api.swagger.yaml  trace_api_plugin.cpp
plugins/trace_api_plugin/test/: test_compressed_file.cpp  test_configuration_utils.cpp  test_data_handlers.cpp  test_extraction.cpp  test_responses.cpp  test_trace_file.cpp
plugins/txn_test_gen_plugin/: CMakeLists.txt  README.md  txn_test_gen_plugin.cpp
plugins/wallet_api_plugin/: CMakeLists.txt  wallet_api_plugin.cpp
plugins/wallet_plugin/: CMakeLists.txt  se_wallet.cpp  wallet.cpp  wallet_manager.cpp  wallet_plugin.cpp  yubihsm_wallet.cpp
programs/: CMakeLists.txt
programs/cline/: CMakeLists.txt  config.hpp.in  help_text.cpp.in  help_text.hpp  httpc.cpp  httpc.hpp  inec.pot  localize.hpp  main.cpp
programs/inery-blocklog/: CMakeLists.txt  main.cpp
programs/inery-launcher/: CMakeLists.txt  config.hpp.in  main.cpp
programs/kined/: CMakeLists.txt  config.hpp.in  main.cpp
programs/nodine/: CMakeLists.txt  config.hpp.in  main.cpp
scripts/: .build_vars  .environment  CMakeLists.txt  generate_bottle.sh  generate_tarball.sh  inery-tn_bounce.sh  inery-tn_down.sh  inery_build.sh  inery_build_amazonlinux.sh  inery_build_centos.sh  inery_build_darwin.sh  inery_build_ubuntu.sh  inery_install.sh  inery_uninstall.sh
scripts/helpers/: general.sh  inery.sh
(+176 files in other folders)
